--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -48,6 +48,18 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
+}
+
+.icons {
+    height: 40%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 1.2rem;
+    font-weight: 900;
 }
 
 .logo {
