--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,21 +2,26 @@
     width: 100%;
     background-color: black;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 60px;
 }
 
 .toggle {
     color: #eee;
-    font-size: 2rem;
+    font-size: 2.3rem;
     font-weight: 900;
+    width: 50px;
+    justify-content: center;
     display: flex;
     align-items: center;
+    margin-right: 20px;
+    border-radius: 4px;
+    background-color: rgb(37, 105, 28);
 }
 
 .active {
-    width: 300px;
+    width: 350px;
     height: calc(100vh - 60px);
     position: fixed;
     top: 60px;
@@ -29,8 +34,8 @@
 }
 
 .notactive {
-    width: 300px;
-    transform: translateX(-300px);
+    width: 350px;
+    transform: translateX(-450px);
     height: calc(100vh - 60px);
     position: fixed;
     transition: all ease 1s;
@@ -43,27 +48,61 @@
 }
 
 ul {
-    height: 60%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.icons {
     height: 40%;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    font-size: 1.2rem;
+    justify-content: space-between;
+}
+
+ul li {
+    list-style-type: none;
+}
+
+ul li a {
+    text-decoration: none;
+    color: #eee;
+    font-size: 1.5rem;
     font-weight: 900;
 }
 
+.icons {
+    /* height: 10%; */
+    width: 100%;
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: space-around;
+    font-size: 1.4rem;
+    flex-wrap: wrap;
+    font-weight: 900;
+}
+
+.auth-buttons {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.auth-buttons button {
+    padding: 10px 35px;
+    font-size: 1.2rem;
+    border-radius: 7px;
+    font-weight: 700;
+    border: none;
+    background-color: rgb(33, 156, 9);
+}
+
+.auth-buttons button:hover {
+    background-color: rgb(37, 105, 28);
+}
+
 .logo {
-    font-size: 2rem;
+    font-size: 2.5rem;
+    margin-left: 20px;
     font-weight: 900;
 }
 
@@ -74,4 +113,10 @@ ul {
 
 .icon {
     color: #eee;
+    background-color: rgb(7, 20, 20);
+    padding: 5px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
