--- a/src/components/HomePage/pages/section1/section1.css
+++ b/src/components/HomePage/pages/section1/section1.css
@@ -23,7 +23,7 @@
 
 .section1-text-box h1 {
     font-size: 4.5rem;
-    color: rgb(253, 208, 6);
+    color: rgb(247, 209, 39);
     text-transform: uppercase;
     font-weight: 900;
     margin: 0;
@@ -31,6 +31,8 @@
 
 .section1-text-box p {
     color: #eee;
+    font-size: 1.2rem;
+    padding: 20px;
 }
 
 .section1-button {
@@ -40,12 +42,23 @@
 }
 
 .section1-button button {
-    margin: 0px 30px;
+    margin: 5px 30px;
     padding: 13px 50px;
     font-size: 1.5rem;
+    color: #eee;
     border-radius: 6px;
-    border: none;
+    /* border: none; */
+    border: 2px solid rgb(37, 105, 28);
     font-weight: 900;
     font-family: "Ubuntu", monospace;
-    background-color: rgb(37, 105, 28);
+    background-color: transparent;
 }
+
+.section1-button button:hover {
+    background-color: rgb(247, 209, 39);
+    border: 0px solid #eee;
+    transition: all 1s ease;
+    color: cadetblue;
+}
+
+@media screen and (max-width: 900px) {}
