--- a/src/components/HomePage/pages/section1/section1.css
+++ b/src/components/HomePage/pages/section1/section1.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     text-align: center;
     width: 80%;
     height: 60%;
@@ -39,6 +39,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .section1-button button {
@@ -61,4 +62,17 @@
     color: cadetblue;
 }
 
-@media screen and (max-width: 900px) {}
+@media screen and (max-width: 950px) {
+    .section1-text-box h1 {
+        font-size: 2.5rem;
+    }
+    .section1-text-box p {
+        font-size: 1rem;
+        /* padding: 10px; */
+    }
+    .section1-text-box {
+        width: 100%;
+        height: 100%;
+        /* background-color: aqua; */
+    }
+}
