--- a/src/components/HomePage/pages/section1/section1.css
+++ b/src/components/HomePage/pages/section1/section1.css
@@ -75,4 +75,9 @@
         height: 100%;
         /* background-color: aqua; */
     }
+    .section1-button button {
+        margin: 5px 15px;
+        padding: 7px 30px;
+        font-size: 1.1rem;
+    }
 }
