--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -51,6 +51,7 @@ ul {
     height: 40%;
     width: 100%;
     display: flex;
+    margin-left: -30px;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
