--- a/src/components/HomePage/pages/section2/section2.css
+++ b/src/components/HomePage/pages/section2/section2.css
@@ -1,5 +1,5 @@
 .section2 {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -32,7 +32,7 @@
     /* flex-direction: column; */
     align-items: center;
     width: 100%;
-    height: 87%;
+    height: 100%;
     flex-wrap: wrap;
     justify-content: space-around;
 }
@@ -53,7 +53,15 @@
 }
 
 .img-section2 {
-    width: 380px;
+    width: 500px;
     margin: 10px;
-    height: 90%;
+    height: 500px;
+}
+
+.img-section2 img {
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
 }
