--- a/src/components/HomePage/pages/section2/section2.css
+++ b/src/components/HomePage/pages/section2/section2.css
@@ -38,7 +38,6 @@
 }
 
 .division {
-    background-color: aqua;
     margin: 5px;
     display: flex;
     align-items: center;
@@ -64,4 +63,22 @@
     width: 100%;
     height: 100%;
     border-radius: 20px;
+}
+
+.check {
+    font-size: 2.2rem;
+    text-align: left;
+    color: rgb(9, 10, 77);
+}
+
+.division p {
+    font-size: 1.2rem;
+    font-family: monospace;
+}
+
+@media screen and (max-width: 500px) {
+    .img-section2 {
+        width: 100%;
+        margin: 0;
+    }
 }
