--- a/src/components/HomePage/pages/section2/section2.css
+++ b/src/components/HomePage/pages/section2/section2.css
@@ -1,6 +1,7 @@
 .section2 {
     height: 100%;
     width: 100%;
+    margin-bottom: 5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
