--- a/src/components/HomePage/pages/section3/section3.css
+++ b/src/components/HomePage/pages/section3/section3.css
@@ -1,4 +1,111 @@
 .section3 {
     width: 100%;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.section3-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.section3-title h4 {
+    text-transform: uppercase;
+    color: rgb(220, 230, 217);
+    font-size: 25px;
+}
+
+.section3-title h1 {
+    text-transform: uppercase;
+    font-size: 2rem;
+    margin-top: -20px;
+}
+
+.section3-box-wrapper {
+    height: 90%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.box-section3 {
+    width: 300px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    height: 300px;
+    background-color: #eee;
+    position: relative;
+}
+
+.box-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    height: 100%;
+    position: relative;
+    background-color: rgb(194, 194, 194);
+}
+
+.box-icon div {
+    font-size: 4rem;
+    color: black;
+}
+
+.text-box-icon {
+    position: absolute;
+    top: 0%;
+    transition: 1s ease all;
+    opacity: 0;
+    width: 100%;
+    left: 50%;
+    color: #eee;
+    z-index: 1;
+    transform: translateX(-50%);
+}
+
+.text-box-icon h4 {
+    font-size: 1.5rem;
+    text-align: center;
+    border-bottom: rgb(243, 242, 242) 2px solid;
+    z-index: 1;
+    margin: 10px 0;
+    color: bisque;
+    text-transform: uppercase;
+    padding: 10px 0;
+}
+
+.text-box-icon p {
+    font-size: 0.9rem;
+    color: bisque;
+    text-align: center;
+    margin: 0;
+}
+
+.overlay {
+    height: 0%;
+    border-radius: 10px;
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    transition: height 1s ease;
+    background: linear-gradient(rgba(30, 49, 158, 0), rgba(12, 12, 87, 0.87));
+}
+
+.box-icon:hover .text-box-icon {
+    top: 30%;
+    opacity: 1;
+    transition: 1s ease all;
+}
+
+.box-icon:hover .overlay {
+    height: 100%;
+    transition: height 1s ease;
 }
