--- a/src/components/HomePage/pages/section3/section3.css
+++ b/src/components/HomePage/pages/section3/section3.css
@@ -37,10 +37,9 @@
 
 .box-section3 {
     width: 300px;
-    margin-bottom: 10px;
+    margin: 10px;
     border-radius: 10px;
     height: 300px;
-    background-color: #eee;
     position: relative;
 }
 
@@ -51,7 +50,7 @@
     border-radius: 10px;
     height: 100%;
     position: relative;
-    background-color: rgb(194, 194, 194);
+    background-color: rgb(235, 235, 235);
 }
 
 .box-icon div {
@@ -64,7 +63,7 @@
     top: 0%;
     transition: 1s ease all;
     opacity: 0;
-    width: 100%;
+    width: 96%;
     left: 50%;
     color: #eee;
     z-index: 1;
@@ -96,11 +95,11 @@
     position: absolute;
     width: 100%;
     transition: height 1s ease;
-    background: linear-gradient(rgba(30, 49, 158, 0), rgba(12, 12, 87, 0.87));
+    background: linear-gradient(rgba(4, 12, 54, 0.753), rgba(6, 6, 145, 0.87));
 }
 
 .box-icon:hover .text-box-icon {
-    top: 30%;
+    top: 22%;
     opacity: 1;
     transition: 1s ease all;
 }
@@ -108,4 +107,10 @@
 .box-icon:hover .overlay {
     height: 100%;
     transition: height 1s ease;
+}
+
+@media screen and (max-width: 960px) {
+    .section3 {
+        height: 100%;
+    }
 }
