--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -6,6 +6,7 @@
     align-items: center;
     height: 60px;
     position: fixed;
+    z-index: 10;
     top: 0;
 }
 
@@ -24,6 +25,7 @@
 
 .active {
     width: 350px;
+    z-index: 10;
     height: calc(100vh - 60px);
     position: fixed;
     top: 60px;
@@ -40,6 +42,7 @@
     transform: translateX(-450px);
     height: calc(100vh - 60px);
     position: fixed;
+    z-index: 10;
     transition: all ease 1s;
     top: 60px;
     background-color: rgb(28, 28, 51);
