--- a/src/components/HomePage/pages/section4/section4.css
+++ b/src/components/HomePage/pages/section4/section4.css
@@ -28,12 +28,11 @@
 
 .section4-wrapper {
     width: 80%;
-    height: 500px;
+    height: 600px;
     background-color: rgb(28, 28, 51);
     border-radius: 20px;
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: repeat(3, auto);
 }
 
 .item-section4 {
