--- a/src/components/HomePage/pages/section2/section2.css
+++ b/src/components/HomePage/pages/section2/section2.css
@@ -14,6 +14,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .section2-title h4 {
