--- a/src/components/HomePage/pages/section4/section4.css
+++ b/src/components/HomePage/pages/section4/section4.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .section4-title h4 {
