--- a/src/components/HomePage/pages/footer/footer.css
+++ b/src/components/HomePage/pages/footer/footer.css
@@ -2,7 +2,7 @@
     height: 60vh;
     width: 100%;
     background-color: black;
-    margin-top: 10vh;
+    /* margin-top: 10vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
