--- a/src/components/Gallery/pages/footerComponent/galComponent.css
+++ b/src/components/Gallery/pages/footerComponent/galComponent.css
@@ -1,5 +1,45 @@
 .gallery {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #eee;
+}
+
+.gallery-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 10vh;
+}
+
+.gallery-title h4 {
+    text-transform: uppercase;
+    color: rgb(220, 230, 217);
+    font-size: 25px;
+}
+
+.gallery-title h1 {
+    text-transform: uppercase;
+    font-size: 2rem;
+    margin-top: -20px;
+}
+
+.gallery-grid {
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+}
+
+
+/* .box-gallery{
+
+} */
+
+.box-gallery img {
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
 }
