--- a/src/components/Gallery/pages/footerComponent/galComponent.css
+++ b/src/components/Gallery/pages/footerComponent/galComponent.css
@@ -30,6 +30,7 @@
     grid-template-rows: repeat(5, 1fr);
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
+    transition: all 1s ease;
 }
 
 
