--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     padding: 0;
+    transition: all 1s ease;
 }
 
 code {
